fix sign-in card in dark mode

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -5,7 +5,6 @@
 @layer base {
     body {
       @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 dark:border-white;
-      
     }
     #nav-holder{
       @apply bg-white dark:bg-gradient-to-t from-purple-900 to-fuchsia-500
@@ -34,9 +33,6 @@
     #profile-holder{
       @apply bg-white dark:bg-gray-700 drop-shadow-w2xl
     }
-    selection {
-    @apply text-white bg-blue-600;
-    }
     #footer {
       @apply bg-neutral-800 dark:bg-gray-800
     }
@@ -52,7 +48,7 @@
     #signin-card{
       @apply bg-white dark:bg-gray-800
     }
-    /* #nav-btn {
-      @apply dark:contrast-0
+    /* selection {
+    @apply text-white bg-blue-600;
     } */
 }
